fix(): Dark mode red constrast ratio.

--- a/src/tokens.css
+++ b/src/tokens.css
@@ -54,7 +54,7 @@
   --accent: 240 3.7% 15.9%;
   --accent-foreground: 0 0% 98%;
 
-  --destructive: 0 62.8% 30.6%;
+  --destructive: 0 80.0% 55.0%;
   --destructive-foreground: 0 0% 98%;
 
   --border: 240 3.7% 15.9%;
